# pvw-cli

./: .gitignore  AZURE_PURVIEW_API_GAP_ANALYSIS.md  Actions.todo  BULK_UPDATE_FIXES.md  CODE_OF_CONDUCT.md  COLLECTIONS_BUSINESS_METADATA_ENHANCEMENT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CSV_IMPLEMENTATION_COMPLETION_REPORT.md  CSV_IMPLEMENTATION_STATUS.md  ENHANCEMENT_COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  FIXES_IMPORT_IDEMPOTENCE.md  Fabric-Publiclibrary.yml  LICENSE  LINEAGE_COMPLETION_SUMMARY.md  NOTICE  OFFICIAL_API_COMPLIANCE_UPDATE.md  README.md  RELEASE_v1.7.1_SUMMARY.md  SCRIPTS_README.md  SECURITY.md  TEST_RESULTS_CUSTOM_ATTRIBUTES.md  backend_api_test.py  build_package.ps1  build_pypi.bat  collect_all_fabric_assets.ps1  debug_collections.py  debug_collections_url.py  demo_enhanced_cli.py  deploy-security-updates.bat  diagnose_glossary_endpoints.py  diagnose_purview_connection.py  docker-compose.yml  exe_build.ps1  file.txt  frontend_backend_integration.py  manual_test.py  minimal_test.py  minimal_trace.py  (+63 more)
.github/: dependabot.yml  mcp.json
backend/: .env.example  Dockerfile  main.py  requirements.in  requirements.txt
doc/: ADVANCED_FEATURES.md  ADVANCED_SEARCH_GUIDE.md  API_COVERAGE_GAP_ANALYSIS.md  API_DISCOVERY_FINAL.md  API_GAPS_ANALYSIS.md  COLLECTIONS_PERMISSIONS_FR.md  COMPLETE_CLI_REFERENCE.md  FIX_COLLECTIONS_CREATE_403.md  IMPLEMENTATION_SUMMARY.md  LINEAGE_CSV_OPERATIONS.md  PVW_and_PurviewClient.md  QUERY_APIS_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  RELATIONSHIPS_IMPLEMENTATION.md  UC_API_COVERAGE_ANALYSIS.md  api-documentation-status.json  api-documentation-status.md  data-governance-api-gap-analysis.md  documentation_review.md  generic_script_success.md  governance_domains_guide.md  keyresult-commands-quickstart.md  keyresult-implementation-summary.md  purview_cli_vs_api_gap_analysis.md  unified_catalog_complete.md  unified_catalog_progress.md
docs/: ADVANCED_FEATURES.md  DEPENDENCY-UPDATE-TROUBLESHOOTING.md  DEPENDENCY-VULNERABILITIES.md  FIX_COLLECTIONS_CREATE_403.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  UC_API_COVERAGE_ANALYSIS.md  authentication-troubleshooting.md  bulk-csv-troubleshooting.md  collections-permissions-fr.md  collections-permissions.md  command-groups.md  common-workflows.md  coverage-only-endpoints.md  entity-bulk-csv-guide.md  fix-collections-create-403.md  getting-started.md  implementation-summary.md  index.md  performance-optimization-guide.md  purview-mcp-server.md  quick-reference.md  readme.md  templates.md  (+4 more)
tools/PurviewMCPServer/: Dockerfile  PROMPT_INSTRUCTIONS.md  README.md  __init__.py  __version__.py  diagnose.ps1  package.json  pyproject.toml  requirements.txt  server.py  server_legacy.py
tools/PurviewMCPServer/docs/: PROMPT_INSTRUCTIONS.md
tools/PurviewMCPServer/tools/: microsoft_learn.py  microsoft_learn_tools.py
tools/mcp/: .env.example  Dockerfile  README.md  build_pypi.ps1  pyproject.toml
tools/mcp/purview_mcp_server/: __version__.py  config.py
tools/mcp/pvw_mcp_server/: __version__.py  prompt_instructions.md  server.py
(+1067 files in other folders)
