[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purview-mcp-server"
description = "Model Context Protocol server for Microsoft Purview"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "pvw-cli>=1.13.3",
    "fastmcp>=2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "aiohttp>=3.8.0",
    "azure-identity>=1.12.0",
    "pandas>=1.5.0",
]

[project.scripts]
purview-mcp = "purview_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["purview_mcp_server*"]

[tool.setuptools.dynamic]
version = {attr = "purview_mcp_server.__version__.__version__"}